@@ -5,7 +5,8 @@
 === 0.5.2 ===
 * Added hash interface for objects.
 * Added default hashing function.
-* Implemented lltl::pphash collection which allows to use hash maps
+* Implemented lltl::pphash collection which allows to use hash maps.
+* Added is_empty() method to lltl::parray class.
 
 === 0.5.1 ===
 * added set method to lltl::parray which allows to set single 
